# vinodex

./: .gitignore
contracts/default-nft-patter/src/: internal.rs  nft_core.rs
contracts/market-crud/: Cargo.toml
contracts/market-crud/src/: internal.rs  lib.rs  nft_core.rs
contracts/market-crud/src/helpers/: converters.rs  self_viewer.rs
contracts/market-crud/src/profiles/: email_subscriptions.rs  profile_contract.rs  profile_provider.rs  profile_provider.rs_23_02_3022
contracts/market-crud/src/sales/: internal.rs  sale.rs
contracts/market-crud/src/tokens/: burn.rs  collection.rs  list_contract.rs  metadata.rs  mint_contract.rs  token.rs
contracts/market-salebuy/: Cargo.toml
contracts/market-salebuy-old/res/: pidpiska_na_valutu_dodatok_23-02-2022.csv
contracts/market-salebuy/src/: lib.rs  nft_callbacks.rs
contracts/task-manager/: Cargo.toml
contracts/task-manager/src/: tasks.rs
landing/: index.html
landing/css/: index.css  mobile.css  modern-normalize.css
pluminite-ui/: config-overrides.js  package-lock.json  package.json  tsconfig.json
pluminite-ui-master/: package.json
pluminite-ui-master/contract/: Cargo.toml
pluminite-ui-master/contract/market-crud/: Cargo.toml
pluminite-ui-master/contract/src/: enumerable.rs  enumerable_filter.rs  internal.rs  lib.rs  (+2 more)
pluminite-ui-master/src/: config.js  index.html  utils.js
pluminite-ui/public/: Web.config  index.html
pluminite-ui/src/: .eslintrc  config.ts  index.css  index.tsx  utils.ts
reactNetCore/: reactNetCore.sln
reactNetCore/Vinodex/: Program.cs  Startup.cs  WeatherForecast.cs
(+199 files in other folders)
