[package]
name = "nft_vinodex"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=3.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }

[profile.release]
codegen-units=24
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
